--- a/MANIFEST.in
+++ b/MANIFEST.in
@@ -1,4 +1,6 @@
 # All files tracked by Git are included in PyPI distribution
+include bentoml/grpc/**/*_pb2*.py
+include bentoml/grpc/**/*.pyi
 
 # Files to exclude in PyPI distribution
 exclude CONTRIBUTING.md GOVERNANCE.md CODE_OF_CONDUCT.md DEVELOPMENT.md SECURITY.md
@@ -19,6 +21,7 @@ prune .git*
 prune */__pycache__
 prune */.DS_Store
 prune */.ipynb_checkpoints
+prune */README*
 
 # Patterns to exclude from any directory
 global-exclude *.py[cod]
